HHH-19846 - Drop JUnit 4 Usage
Signed-off-by: Jan Schatteman <jschatte@redhat.com>

HHH-19846 - Remove JUnit4: org.hibernate.bytecode.internal.bytebuddy

HHH-19846 - Remove JUnit4: org.hibernate.dialect

HHH-19846 - Remove JUnit4: org.hibernate.engine.jdbc.env.internal

HHH-19846 - Remove JUnit4: org.hibernate.orm.test.actionqueue

HHH-19846 - Remove JUnit4: org.hibernate.orm.test.annotations

HHH-19846 - Remove JUnit4: org.hibernate.orm.test.dialect.functional

HHH-19846 - Remove JUnit4: org.hibernate.orm.test.dialect.resolver

HHH-19846 - Remove JUnit4: org.hibernate.orm.test.dialect.unit.lockhint

HHH-19846 - Remove JUnit4: org.hibernate.orm.test.dialect.function

HHH-19846 - Remove JUnit4: org.hibernate.orm.test.dialect.unit.locktimeout

HHH-19846 - Remove JUnit4: org.hibernate.orm.test.dialect.unit.sequence

HHH-19846 - Remove JUnit4: org.hibernate.orm.test.dialect

HHH-19846 - Remove JUnit4: org.hibernate.orm.test.mapping

HHH-19846 - Remove JUnit4: org.hibernate.orm.test.mapping.access

HHH-19846 - Remove JUnit4: org.hibernate.orm.test.mapping.basic/bitset

HHH-19846 - Remove JUnit4: org.hibernate.orm.test.dirtiness

HHH-19846 - Remove JUnit4: org.hibernate.orm.test.distinct

HHH-19846 - Remove JUnit4: org.hibernate.orm.test.mapping.collections

HHH-19846 - Remove JUnit4: org.hibernate.orm.test.mapping.collections.custom.basic/declaredtype/parameterized

HHH-19846 - Remove JUnit4: org.hibernate.orm.test.mapping.dynamic

HHH-19846 - Remove JUnit4: org.hibernate.orm.test.mapping.lazytoone

HHH-19846 - Remove JUnit4: org.hibernate.orm.test.mapping.converted.converter

HHH-19846 - Remove JUnit4: org.hibernate.orm.test.mapping.converted.enums

HHH-19846 - Remove JUnit4: org.hibernate.orm.test.mapping.converter.*

HHH-19846 - Remove JUnit4: org.hibernate.orm.test.mapping.embeddable.*

HHH-19846 - Remove JUnit4: org.hibernate.orm.test.mapping.fetch/formula/generated

HHH-19846 - Remove JUnit4: org.hibernate.orm.test.mapping.identifier/*

HHH-19846 - Remove JUnit4: o